  Nvim 0.10 |deprecated-0.10|) are removed.
• The legacy signature of |vim.diagnostic.enable()| (deprecated in Nvim 0.10
  |deprecated-0.10|) is no longer supported.

EDITOR

- |i_CTRL-R| inserts named/clipboard registers (A-Z,a-z,0-9+) literally, like
  pasting instead of like user input. Improves performance, avoids broken
  formatting. To get the old behavior you can use `<C-R>=@x`.

EVENTS

• |ui-messages| no longer emits the `msg_show.return_prompt`, and
  `msg_history_clear` events. The `msg_clear` event was repurposed and is now
  emitted after the screen is cleared. These events arbitrarily assumed a
  message UI that mimics the legacy message grid. Benefit: reduced UI event
  traffic and more flexibility for UIs.
  The `msg_history_show` event has an additional "prev_cmd" argument.

HIGHLIGHTS

• todo

LSP

• JSON "null" values in LSP messages are represented as |vim.NIL| instead of `nil`.
  Missing fields (as opposed to JSON "null") are still represented as `nil`.
• The function set with |vim.lsp.log.set_format_func()| is now given all
  arguments corresponding to a log entry instead of the individual arguments.
• Renamed `vim.lsp.semantic_tokens` `start()/stop()` to `enable()`.
• |vim.lsp.util.convert_signature_help_to_markdown_lines()| activeParameter
  handling updated:
    • Values < 0 are now treated as `nil` instead of 0.
    • Values outside the range of `signatures[activeSignature].parameters`
      are now treated as `nil` instead of `#signatures[activeSignature].parameters`

LUA

• Renamed `vim.diff` to `vim.text.diff`.

OPTIONS

• 'shelltemp' defaults to "false".

PLUGINS

• Removed "shellmenu" plugin, an old menu-based quasi-snippet plugin for shell scripts.

TREESITTER

• |treesitter-directive-offset!| can now be applied to quantified captures. It
  no longer sets `metadata[capture_id].range`; it instead sets
  `metadata[capture_id].offset`. The offset will be applied in
  |vim.treesitter.get_range()|, which should be preferred over reading